apps/gramnuri-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gramnuri-api
  labels:
    app: gramnuri-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gramnuri-api
  template:
    metadata:
      labels:
        app: gramnuri-api
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: gramnuri-api
          image: ghcr.io/igh9410/gramnuri-api
          ports:
            - name: http
              containerPort: 8080
          lifecycle:
            preStop:
              sleep:
                seconds: 30
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
      imagePullSecrets:
        - name: ghcr-image-pull-secrets
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: gramnuri-api
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: gramnuri-api
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
