apps/gramnuri-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gramnuri-api
  labels:
    app: gramnuri-api
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: gramnuri-api
  type: ClusterIP
