apps/gramnuri-api/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gramnuri-api-httproute
  namespace: dev
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - api.landskipifyai.com
  rules:
    - backendRefs:
        - name: gramnuri-api
          port: 80
